--- a/ETL_Create_DataBase.ipynb
+++ b/ETL_Create_DataBase.ipynb
@@ -2924,8 +2924,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "b166d6dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches_form_one = box_office.str.contains(form_one, flags=re.IGNORECASE, na=False)\n",
+    "matches_form_two = box_office.str.contains(form_two, flags=re.IGNORECASE, na=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "3d356baf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34                         US$ 4,212,828\n",
+       "79                              $335.000\n",
+       "110                   $4.35-4.37 million\n",
+       "130                        US$ 4,803,039\n",
+       "600                           $5000 (US)\n",
+       "731                         $ 11,146,270\n",
+       "957                             $ 50,004\n",
+       "1070                          35,254,617\n",
+       "1147    $ 407,618 (U.S.) (sub-total) [1]\n",
+       "1446                        $ 11,829,959\n",
+       "1480                          £3 million\n",
+       "1611                            $520.000\n",
+       "1865                        ¥1.1 billion\n",
+       "2032                                 N/A\n",
+       "2091                                $309\n",
+       "2130               US$ 171.8 million [9]\n",
+       "2257                   US$ 3,395,581 [1]\n",
+       "2263            $ 1,223,034 ( domestic )\n",
+       "2347                            $282.175\n",
+       "2638            $ 104,883 (US sub-total)\n",
+       "2665         926,423 admissions (France)\n",
+       "2697      $ 1.7 million (US) (sub-total)\n",
+       "2823                            $414.000\n",
+       "2924                            $621.000\n",
+       "3088           $32 [2] –33.1 million [1]\n",
+       "3631                                 TBA\n",
+       "3859                  $38.9–40.3 million\n",
+       "3879            CN¥3.650 million (China)\n",
+       "4116                          £7,385,434\n",
+       "4123                            $161.000\n",
+       "4261                  $20.7–23.9 million\n",
+       "4306                              $20-30\n",
+       "4492                        $47.7 millon\n",
+       "4561             $45.2k (only in Turkey)\n",
+       "4662                USD$ 8.2 million [2]\n",
+       "5362                   $ 142 million [3]\n",
+       "5447                               £2.56\n",
+       "5784                            413 733$\n",
+       "6013                             Unknown\n",
+       "6145                  $17.5–18.4 million\n",
+       "6234                  $41.8–41.9 million\n",
+       "6369                               $111k\n",
+       "6370                                $588\n",
+       "6593                      less than $372\n",
+       "6829                    $ 41 million [3]\n",
+       "6843                             8 crore\n",
+       "6904                         $6.9 millon\n",
+       "Name: Box office, dtype: object"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box_office[~matches_form_one & ~matches_form_two]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "a35b49b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "form_one = r'\\$\\s*\\d+\\.?\\d*\\s*[mb]illion'\n",
+    "form_two = r'\\$\\s*\\d{1,3}(?:,\\d{3})+'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "c26c953b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "form_two = r'\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "0b374439",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "form_two = r'\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+(?!\\s[mb]illion)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "12ddd90c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "box_office = box_office.str.replace(r'\\$.*[-—–](?![a-z])', '$', regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "61f48c8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "form_one = r'\\$\\s*\\d+\\.?\\d*\\s*[mb]illi?on'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b379e316",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2947,7 +3077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
