--- a/ETL_Create_DataBase.ipynb
+++ b/ETL_Create_DataBase.ipynb
@@ -2936,7 +2936,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1565aa99",
+   "id": "b9672937",
    "metadata": {},
    "outputs": [
     {
@@ -3004,7 +3004,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "aee31d71",
+   "id": "0bff7fd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3015,7 +3015,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "7c1149d3",
+   "id": "9c68b53e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3025,7 +3025,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "52137ab0",
+   "id": "f4e84784",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3035,7 +3035,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "78c0b81f",
+   "id": "9d38bcd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3045,7 +3045,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "31d1af4f",
+   "id": "684b69e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3055,7 +3055,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "457ae4f7",
+   "id": "ae4431ba",
    "metadata": {},
    "outputs": [
     {
@@ -3161,7 +3161,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "a6df0859",
+   "id": "3082ce30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3214,7 +3214,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "13080e75",
+   "id": "80448711",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3224,7 +3224,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "1ab11e65",
+   "id": "040a7bdb",
    "metadata": {},
    "outputs": [
     {
@@ -3256,7 +3256,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "4dbcad50",
+   "id": "2f176a6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3266,7 +3266,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "84816614",
+   "id": "fb96f0cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3276,7 +3276,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "60ce2a45",
+   "id": "06c07771",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3286,7 +3286,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "4f260016",
+   "id": "0fd9e8c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3296,7 +3296,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a840bda4",
+   "id": "ff21b43a",
    "metadata": {},
    "outputs": [
     {
@@ -3357,7 +3357,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "918ecf10",
+   "id": "1a5585ab",
    "metadata": {},
    "outputs": [
     {
@@ -3425,7 +3425,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "f4eab5c0",
+   "id": "4a332843",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3435,7 +3435,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f09ec1b2",
+   "id": "99b632b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3445,7 +3445,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "93bdf70b",
+   "id": "bf2ea678",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3455,7 +3455,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "05fc9949",
+   "id": "5c6299c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3477,7 +3477,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "eabaf9ed",
+   "id": "0092e58b",
    "metadata": {},
    "outputs": [
     {
@@ -3584,7 +3584,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "c03b01bd",
+   "id": "b217c5cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3594,7 +3594,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "af2a95a2",
+   "id": "b9329e0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3604,7 +3604,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "c7e4889f",
+   "id": "abd16c13",
    "metadata": {},
    "outputs": [
     {
@@ -3625,7 +3625,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "925bc60e",
+   "id": "dbeb4add",
    "metadata": {},
    "outputs": [
     {
@@ -3657,7 +3657,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "1208985d",
+   "id": "cc3cfdae",
    "metadata": {},
    "outputs": [
     {
@@ -3678,7 +3678,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "a150fe5d",
+   "id": "924ed9b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3689,7 +3689,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "20e0ca99",
+   "id": "82314fd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3701,7 +3701,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "48202c4f",
+   "id": "f96f8bba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3713,7 +3713,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "302714f3",
+   "id": "efc9b46b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3724,7 +3724,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "09793460",
+   "id": "1e7b8088",
    "metadata": {},
    "outputs": [
     {
@@ -3770,7 +3770,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "1a2c9f55",
+   "id": "8d3daaed",
    "metadata": {},
    "outputs": [
     {
@@ -3797,7 +3797,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "e3f95797",
+   "id": "c94933c2",
    "metadata": {},
    "outputs": [
     {
@@ -3974,7 +3974,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "681dd883",
+   "id": "c2a4dc08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3985,7 +3985,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "820507f1",
+   "id": "b041117c",
    "metadata": {},
    "outputs": [
     {
@@ -4008,7 +4008,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "29efec53",
+   "id": "43394d97",
    "metadata": {},
    "outputs": [
     {
@@ -4041,7 +4041,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "1ab146ec",
+   "id": "948b43ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4053,7 +4053,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "69c91025",
+   "id": "ab73c173",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4063,7 +4063,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "107e597b",
+   "id": "0a4c32f7",
    "metadata": {},
    "outputs": [
     {
@@ -4099,7 +4099,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "2393f8a3",
+   "id": "957704db",
    "metadata": {},
    "outputs": [
     {
@@ -4131,7 +4131,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "9c7fb54f",
+   "id": "b779faa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4141,7 +4141,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "8e8620a2",
+   "id": "defb8cbc",
    "metadata": {},
    "outputs": [
     {
@@ -4184,7 +4184,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "4c2cbb7b",
+   "id": "bb5f8488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4194,7 +4194,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "322398a2",
+   "id": "258dc332",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4213,7 +4213,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "f4e11049",
+   "id": "bf201a4d",
    "metadata": {},
    "outputs": [
     {
@@ -4472,7 +4472,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "78c9855f",
+   "id": "8759fae6",
    "metadata": {},
    "outputs": [
     {
@@ -4590,7 +4590,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "cbf6426f",
+   "id": "499177a7",
    "metadata": {},
    "outputs": [
     {
@@ -4721,7 +4721,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "6fd7ea48",
+   "id": "42aa2315",
    "metadata": {},
    "outputs": [
     {
@@ -4795,7 +4795,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "45e95a30",
+   "id": "545c9816",
    "metadata": {},
    "outputs": [
     {
@@ -4828,7 +4828,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "d721a1a8",
+   "id": "8035724b",
    "metadata": {},
    "outputs": [
     {
@@ -4861,7 +4861,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "1e58c3ad",
+   "id": "3d238537",
    "metadata": {},
    "outputs": [
     {
@@ -4894,7 +4894,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "5cd5aeca",
+   "id": "2cf52e34",
    "metadata": {},
    "outputs": [
     {
@@ -4927,7 +4927,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "637c878a",
+   "id": "a57add2b",
    "metadata": {},
    "outputs": [
     {
@@ -4960,7 +4960,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "c5ac90a6",
+   "id": "517d00aa",
    "metadata": {},
    "outputs": [
     {
@@ -4992,7 +4992,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "da32b17f",
+   "id": "f68cfc0b",
    "metadata": {},
    "outputs": [
     {
@@ -5109,7 +5109,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "620a2838",
+   "id": "db08e189",
    "metadata": {},
    "outputs": [
     {
@@ -5130,7 +5130,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "39d9816f",
+   "id": "f7afe91d",
    "metadata": {},
    "outputs": [
     {
@@ -5593,7 +5593,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "e779c0dd",
+   "id": "e786fbb1",
    "metadata": {},
    "outputs": [
     {
@@ -5625,7 +5625,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "9c3c7533",
+   "id": "cb9d4586",
    "metadata": {},
    "outputs": [
     {
@@ -5657,7 +5657,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "38b45f3b",
+   "id": "12aa7233",
    "metadata": {},
    "outputs": [
     {
@@ -5696,7 +5696,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "5a607dd4",
+   "id": "2b22ad52",
    "metadata": {},
    "outputs": [
     {
@@ -5827,7 +5827,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "c9977988",
+   "id": "d2a4a239",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5838,7 +5838,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "3c11dc5f",
+   "id": "e1d331af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5853,7 +5853,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "3bacbf36",
+   "id": "503c829f",
    "metadata": {},
    "outputs": [
     {
@@ -5883,7 +5883,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "fb999a9a",
+   "id": "7c03d126",
    "metadata": {},
    "outputs": [
     {
@@ -6376,7 +6376,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "11760b23",
+   "id": "30d27a07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6391,7 +6391,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "881c35cc",
+   "id": "a0c85523",
    "metadata": {},
    "outputs": [
     {
@@ -6415,7 +6415,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "3cf0747f",
+   "id": "f36c4e09",
    "metadata": {},
    "outputs": [
     {
@@ -6445,7 +6445,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "c8d05033",
+   "id": "a438d878",
    "metadata": {
     "scrolled": true
    },
@@ -6463,7 +6463,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "809759c1",
+   "id": "e86c039f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6488,19 +6488,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "780b6f48",
+   "execution_count": 120,
+   "id": "b457b1e2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "a610a62a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "a81ef2bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Left merge\n",
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b2d1335",
+   "id": "8adb24d6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Fill in Zero\n",
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)"
+   ]
   }
  ],
  "metadata": {
