--- a/ETL_Create_DataBase.ipynb
+++ b/ETL_Create_DataBase.ipynb
@@ -1712,6 +1712,7 @@
     }
    ],
    "source": [
+    "# List Comprehension filter out tv shows\n",
     "wiki_movies = [movie for movie in wiki_movies_raw\n",
     "               if ('Director' in movie or 'Directed by' in movie)\n",
     "                   and 'imdb_link' in movie\n",
@@ -2299,7 +2300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make a list of cleaned movies with a list comprehension:\n",
+    "# make a list of cleaned movies with a list comprehension to iterate through the cleaned wiki movies list:\n",
     "clean_movies = [clean_movie(movie) for movie in wiki_movies]"
    ]
   },
@@ -2359,6 +2360,7 @@
     }
    ],
    "source": [
+    "# Read in the cleaned movies list into a DataFrame\n",
     "wiki_movies_df = pd.DataFrame(clean_movies)\n",
     "sorted(wiki_movies_df.columns.tolist())"
    ]
@@ -2721,6 +2723,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# list comprehension to keep the columns that don't have null values\n",
     "wiki_columns_to_keep = [column for column in wiki_movies_df.columns if wiki_movies_df[column].isnull().sum() < len(wiki_movies_df) * 0.9]\n",
     "wiki_movies_df = wiki_movies_df[wiki_columns_to_keep]"
    ]
@@ -2774,6 +2777,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a variable that will hold the non-null values and drops missing values with the following:\n",
     "box_office = wiki_movies_df['Box office'].dropna()"
    ]
   },
@@ -6621,7 +6625,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "721a2f14",
+   "id": "85a55422",
    "metadata": {},
    "outputs": [
     {
@@ -6674,7 +6678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaba3079",
+   "id": "f2a6149a",
    "metadata": {},
    "outputs": [],
    "source": []
