--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -37,11 +37,48 @@
    "source": [
     "# 1. Add the clean movie function that takes in the argument, \"movie\".\n",
     "def clean_movie(movie):\n",
-    "    movie_copy = dict(movie) #create a non-destructive copy\n",
+    "    movie = dict(movie) #create a non-destructive copy\n",
+    "    alt_titles = {}\n",
+    "    # Loop through a list of all alternative title keys.\n",
+    "    for key in ['Also known as','Arabic','Cantonese','Chinese','French',\n",
+    "                'Hangul','Hebrew','Hepburn','Japanese','Literally',\n",
+    "                'Mandarin','McCune–Reischauer','Original title','Polish',\n",
+    "                'Revised Romanization','Romanized','Russian',\n",
+    "                'Simplified','Traditional','Yiddish']:\n",
+    "        #Check if the current key exists in the movie object.\n",
+    "        if key in movie:\n",
+    "            # If so, remove the key-value pair and add to the alternative titles dictionary.\n",
+    "            alt_titles[key] = movie[key]\n",
+    "            movie.pop(key)\n",
     "    \n",
-    "    \n",
-    "    \n",
+    "    # After looping through every key, add the alternative titles dict to the movie object.\n",
+    "    if len(alt_titles) > 0:\n",
+    "        movie['alt_titles'] = alt_titles\n",
     "\n",
+    "    # merge column names\n",
+    "    def change_column_name(old_name, new_name):\n",
+    "        if old_name in movie:\n",
+    "            movie[new_name] = movie.pop(old_name)\n",
+    "    change_column_name('Adaptation by', 'Writer(s)')\n",
+    "    change_column_name('Country of origin', 'Country')\n",
+    "    change_column_name('Directed by', 'Director')\n",
+    "    change_column_name('Distributed by', 'Distributor')\n",
+    "    change_column_name('Edited by', 'Editor(s)')\n",
+    "    change_column_name('Length', 'Running time')\n",
+    "    change_column_name('Original release', 'Release date')\n",
+    "    change_column_name('Music by', 'Composer(s)')\n",
+    "    change_column_name('Produced by', 'Producer(s)')\n",
+    "    change_column_name('Producer', 'Producer(s)')\n",
+    "    change_column_name('Productioncompanies ', 'Production company(s)')\n",
+    "    change_column_name('Productioncompany ', 'Production company(s)')\n",
+    "    change_column_name('Released', 'Release Date')\n",
+    "    change_column_name('Release Date', 'Release date')\n",
+    "    change_column_name('Screen story by', 'Writer(s)')\n",
+    "    change_column_name('Screenplay by', 'Writer(s)')\n",
+    "    change_column_name('Story by', 'Writer(s)')\n",
+    "    change_column_name('Theme music composer', 'Composer(s)')\n",
+    "    change_column_name('Written by', 'Writer(s)')\n",
+    "    \n",
     "    return movie"
    ]
   },
