--- a/ETL_clean_kaggle_data.ipynb
+++ b/ETL_clean_kaggle_data.ipynb
@@ -24,7 +24,7 @@
     "from sqlalchemy import create_engine\n",
     "import psycopg2\n",
     "\n",
-    "from config import db_password\n",
+    "# from config import db_password\n",
     "\n",
     "import time"
    ]
@@ -91,15 +91,14 @@
     "# 1 Add the function that takes in three arguments;\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\n",
     "\n",
-    "def extract_transform_load(wiki_file, kaggle_file, ratings_file):\n",
-    "   \n",
+    "def extract_transform_load():\n",
     "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
-    "    kaggle_metadata = pd.read_csv(kaggle_file, low_memory=False)\n",
-    "    ratings = pd.read_csv(ratings_file)\n",
+    "    kaggle_metadata = pd.read_csv(f'{file_dir}movies_metadata.csv', low_memory=False)\n",
+    "    ratings = pd.read_csv(f'{file_dir}ratings.csv')\n",
     "\n",
     "\n",
     "    # Open and read the Wikipedia data JSON file.\n",
-    "    with open(wiki_file, mode='r') as file:\n",
+    "    with open(f'{file_dir}/wikipedia-movies.json', mode='r') as file:\n",
     "        wiki_movies_raw = json.load(file)\n",
     "    \n",
     "    # Write a list comprehension to filter out TV shows.\n",
@@ -256,16 +255,16 @@
     "\n",
     "\n",
     "    # 7. Filter the movies DataFrame for specific columns.\n",
-    "    movies_df = movies_df[['imdb_id','id','title_kaggle','original_title','tagline','belongs_to_collection','url','imdb_link',\n",
+    "    movies_df['video'].value_counts(dropna=False)\n",
+    "\n",
+    "\n",
+    "    # 8. Rename the columns in the movies DataFrame.\n",
+    "    movies_df = movies_df.loc[:, ['imdb_id','id','title_kaggle','original_title','tagline','belongs_to_collection','url','imdb_link',\n",
     "                       'runtime','budget_kaggle','revenue','release_date_kaggle','popularity','vote_average','vote_count',\n",
     "                       'genres','original_language','overview','spoken_languages','Country',\n",
     "                       'production_companies','production_countries','Distributor',\n",
     "                       'Producer(s)','Director','Starring','Cinematography','Editor(s)','Writer(s)','Composer(s)','Based on'\n",
     "                      ]]\n",
-    "\n",
-    "\n",
-    "    # 8. Rename the columns in the movies DataFrame.\n",
-    "    \n",
     "    \n",
     "    movies_df.rename({'id':'kaggle_id',\n",
     "                  'title_kaggle':'title',\n",
@@ -296,52 +295,23 @@
     "    \n",
     "    movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)\n",
     "    \n",
-    "    return wiki_movies_df, movies_with_ratings_df, movies_df\n",
-    "\n",
-    "    print(\"test\")\n",
-    "    # Connect to PostgresSQL\n",
-    "    db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/movie_data\"\n",
-    "    # Create the database engine (to the PostgreSQL database)\n",
-    "    engine = create_engine(db_string)\n",
-    "    \n",
-    "    # Import the movies_df DataFrame to a SQL database.\n",
-    "    movies_df.to_sql(name='movies', con=engine, if_exists='replace', method='multi')\n",
-    "    \n",
-    "    rows_imported = 0\n",
-    "    # get the start_time from time.time()\n",
-    "    start_time = time.time()\n",
-    "    for data in pd.read_csv(ratings_file, chunksize=1000000):\n",
-    "        print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\n",
-    "        data.to_sql(name='ratings', con=engine, if_exists='append', method='multi')\n",
-    "        rows_imported += len(data)\n",
-    "\n",
-    "    # add elapsed time to final print out\n",
-    "    print(f'Done. {time.time() - start_time} total seconds elapsed')"
+    "    return wiki_movies_df, movies_with_ratings_df, movies_df\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 10. Create the path to your file directory and variables for the three files.\n",
     "file_dir = 'Resources/'\n",
     "# The Wikipedia data\n",
-    "wiki_file = f'{file_dir}wikipedia-movies.json'\n",
+    "wiki_file = f'{file_dir}/wikipedia_movies.json'\n",
     "# The Kaggle metadata\n",
-    "kaggle_file = f'{file_dir}movies_metadata.csv'\n",
+    "kaggle_file = f'{file_dir}/movies_metadata.csv'\n",
     "# The MovieLens rating data.\n",
-    "ratings_file = f'{file_dir}ratings.csv'\n",
-    "print(type(ratings_file))"
+    "ratings_file = f'{file_dir}/ratings.csv'"
    ]
   },
   {
@@ -351,185 +321,12 @@
    "outputs": [],
    "source": [
     "# 11. Set the three variables equal to the function created in D1.\n",
-    "wiki_file, kaggle_file, ratings_file = extract_transform_load(wiki_file, kaggle_file, ratings_file)"
+    "wiki_file, kaggle_file, ratings_file = extract_transform_load()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                    url  year  \\\n",
-      "0     https://en.wikipedia.org/wiki/The_Adventures_o...  1990   \n",
-      "1     https://en.wikipedia.org/wiki/After_Dark,_My_S...  1990   \n",
-      "2      https://en.wikipedia.org/wiki/Air_America_(film)  1990   \n",
-      "3       https://en.wikipedia.org/wiki/Alice_(1990_film)  1990   \n",
-      "4         https://en.wikipedia.org/wiki/Almost_an_Angel  1990   \n",
-      "...                                                 ...   ...   \n",
-      "7071    https://en.wikipedia.org/wiki/Holmes_%26_Watson  2018   \n",
-      "7072     https://en.wikipedia.org/wiki/Vice_(2018_film)  2018   \n",
-      "7073  https://en.wikipedia.org/wiki/On_the_Basis_of_Sex  2018   \n",
-      "7074  https://en.wikipedia.org/wiki/Destroyer_(2018_...  2018   \n",
-      "7075  https://en.wikipedia.org/wiki/Black_Mirror:_Ba...  2018   \n",
-      "\n",
-      "                                  imdb_link                            title  \\\n",
-      "0     https://www.imdb.com/title/tt0098987/  The Adventures of Ford Fairlane   \n",
-      "1     https://www.imdb.com/title/tt0098994/             After Dark, My Sweet   \n",
-      "2     https://www.imdb.com/title/tt0099005/                      Air America   \n",
-      "3     https://www.imdb.com/title/tt0099012/                            Alice   \n",
-      "4     https://www.imdb.com/title/tt0099018/                  Almost an Angel   \n",
-      "...                                     ...                              ...   \n",
-      "7071  https://www.imdb.com/title/tt1255919/                  Holmes & Watson   \n",
-      "7072  https://www.imdb.com/title/tt6266538/                             Vice   \n",
-      "7073  https://www.imdb.com/title/tt4669788/              On the Basis of Sex   \n",
-      "7074  https://www.imdb.com/title/tt7137380/                        Destroyer   \n",
-      "7075  https://www.imdb.com/title/tt9495224/                     Bandersnatch   \n",
-      "\n",
-      "                                               Based on  \\\n",
-      "0                           [Characters, by Rex Weiner]   \n",
-      "1     [the novel, After Dark, My Sweet, by, Jim Thom...   \n",
-      "2                [Air America, by, Christopher Robbins]   \n",
-      "3                                                   NaN   \n",
-      "4                                                   NaN   \n",
-      "...                                                 ...   \n",
-      "7071  [Sherlock Holmes, and, Dr. Watson, by, Sir Art...   \n",
-      "7072                                                NaN   \n",
-      "7073                                                NaN   \n",
-      "7074                                                NaN   \n",
-      "7075                                                NaN   \n",
-      "\n",
-      "                                               Starring  \\\n",
-      "0     [Andrew Dice Clay, Wayne Newton, Priscilla Pre...   \n",
-      "1     [Jason Patric, Rachel Ward, Bruce Dern, George...   \n",
-      "2     [Mel Gibson, Robert Downey Jr., Nancy Travis, ...   \n",
-      "3     [Alec Baldwin, Blythe Danner, Judy Davis, Mia ...   \n",
-      "4           [Paul Hogan, Elias Koteas, Linda Kozlowski]   \n",
-      "...                                                 ...   \n",
-      "7071  [Will Ferrell, John C. Reilly, Rebecca Hall, R...   \n",
-      "7072  [Christian Bale, Amy Adams, Steve Carell, Sam ...   \n",
-      "7073  [Felicity Jones, Armie Hammer, Justin Theroux,...   \n",
-      "7074  [Nicole Kidman, Sebastian Stan, Toby Kebbell, ...   \n",
-      "7075  [Fionn Whitehead, Will Poulter, Craig Parkinso...   \n",
-      "\n",
-      "                     Cinematography  \\\n",
-      "0                       Oliver Wood   \n",
-      "1                      Mark Plummer   \n",
-      "2                     Roger Deakins   \n",
-      "3                    Carlo Di Palma   \n",
-      "4                      Russell Boyd   \n",
-      "...                             ...   \n",
-      "7071                    Oliver Wood   \n",
-      "7072                   Greig Fraser   \n",
-      "7073                  Michael Grady   \n",
-      "7074                 Julie Kirkwood   \n",
-      "7075  [Aaron Morton, Jake Polonsky]   \n",
-      "\n",
-      "                                           Release date         Country  \\\n",
-      "0                     [July 11, 1990, (, 1990-07-11, )]   United States   \n",
-      "1     [May 17, 1990, (, 1990-05-17, ), (Cannes Film ...   United States   \n",
-      "2                   [August 10, 1990, (, 1990-08-10, )]   United States   \n",
-      "3                 [December 25, 1990, (, 1990-12-25, )]   United States   \n",
-      "4                                     December 19, 1990              US   \n",
-      "...                                                 ...             ...   \n",
-      "7071  [December 25, 2018, (, 2018-12-25, ), (United ...   United States   \n",
-      "7072  [December 11, 2018, (, 2018-12-11, ), (, Samue...   United States   \n",
-      "7073  [November 8, 2018, (, 2018-11-08, ), (, AFI Fe...   United States   \n",
-      "7074  [August 31, 2018, (, 2018-08-31, ), (, Telluri...   United States   \n",
-      "7075               [28 December 2018, (, 2018-12-28, )]  United Kingdom   \n",
-      "\n",
-      "            Language  ...                       Editor(s)  \\\n",
-      "0            English  ...                 Michael Tronick   \n",
-      "1            English  ...                 Howard E. Smith   \n",
-      "2     [English, Lao]  ...  [John Bloom, Lois Freeman-Fox]   \n",
-      "3            English  ...                  Susan E. Morse   \n",
-      "4            English  ...                    David Stiven   \n",
-      "...              ...  ...                             ...   \n",
-      "7071         English  ...                  Dean Zimmerman   \n",
-      "7072         English  ...                     Hank Corwin   \n",
-      "7073         English  ...                 Michelle Tesoro   \n",
-      "7074         English  ...                   Plummy Tucker   \n",
-      "7075         English  ...                     Tony Kearns   \n",
-      "\n",
-      "                  Composer(s)  \\\n",
-      "0     [Cliff Eidelman, Yello]   \n",
-      "1               Maurice Jarre   \n",
-      "2               Charles Gross   \n",
-      "3                         NaN   \n",
-      "4               Maurice Jarre   \n",
-      "...                       ...   \n",
-      "7071        Mark Mothersbaugh   \n",
-      "7072         Nicholas Britell   \n",
-      "7073            Mychael Danna   \n",
-      "7074         Theodore Shapiro   \n",
-      "7075           Brian Reitzell   \n",
-      "\n",
-      "                                            Producer(s)  \\\n",
-      "0                            [Steve Perry, Joel Silver]   \n",
-      "1                           [Ric Kidney, Robert Redlin]   \n",
-      "2                                        Daniel Melnick   \n",
-      "3                                       Robert Greenhut   \n",
-      "4                                          John Cornell   \n",
-      "...                                                 ...   \n",
-      "7071  [Will Ferrell, Adam McKay, Jimmy Miller, Clayt...   \n",
-      "7072  [Brad Pitt, Dede Gardner, Jeremy Kleiner, Kevi...   \n",
-      "7073                                     Robert W. Cort   \n",
-      "7074             [Fred Berger, Phil Hay, Matt Manfredi]   \n",
-      "7075                                     Russell McLean   \n",
-      "\n",
-      "                                  Production company(s)  \\\n",
-      "0                                       Silver Pictures   \n",
-      "1                                       Avenue Pictures   \n",
-      "2                 [Carolco Pictures, IndieProd Company]   \n",
-      "3                                                   NaN   \n",
-      "4                                                   NaN   \n",
-      "...                                                 ...   \n",
-      "7071  [Columbia Pictures, Gary Sanchez Productions, ...   \n",
-      "7072  [Plan B Entertainment, Gary Sanchez Production...   \n",
-      "7073  [Focus Features, [1], Participant Media, [1], ...   \n",
-      "7074  [30West, Automatik Entertainment, Annapurna Pi...   \n",
-      "7075                       [House of Tomorrow, Netflix]   \n",
-      "\n",
-      "                         Writer(s)    imdb_id  box_office      budget  \\\n",
-      "0      [David Arnott, James Cappe]  tt0098987  21400000.0  20000000.0   \n",
-      "1     [James Foley, Robert Redlin]  tt0098994   2700000.0   6000000.0   \n",
-      "2       [John Eskow, Richard Rush]  tt0099005  57718089.0  35000000.0   \n",
-      "3                      Woody Allen  tt0099012   7331647.0  12000000.0   \n",
-      "4                       Paul Hogan  tt0099018   6939946.0  25000000.0   \n",
-      "...                            ...        ...         ...         ...   \n",
-      "7071                    Etan Cohen  tt1255919  41900000.0  42000000.0   \n",
-      "7072                    Adam McKay  tt6266538  76100000.0  60000000.0   \n",
-      "7073             Daniel Stiepleman  tt4669788  38400000.0  20000000.0   \n",
-      "7074     [Phil Hay, Matt Manfredi]  tt7137380   5500000.0   9000000.0   \n",
-      "7075               Charlie Brooker  tt9495224         NaN         NaN   \n",
-      "\n",
-      "     release_date  running_time  \n",
-      "0      1990-07-11         102.0  \n",
-      "1      1990-05-17         114.0  \n",
-      "2      1990-08-10         113.0  \n",
-      "3      1990-12-25         106.0  \n",
-      "4      1990-12-19          95.0  \n",
-      "...           ...           ...  \n",
-      "7071   2018-12-25          90.0  \n",
-      "7072   2018-12-11         132.0  \n",
-      "7073   2018-11-08         120.0  \n",
-      "7074   2018-08-31         123.0  \n",
-      "7075   2018-12-01          90.0  \n",
-      "\n",
-      "[7033 rows x 23 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(wiki_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +578,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +809,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1061,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,12 +1073,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# By Marck Boge"
-   ]
+   "source": []
   }
  ],
  "metadata": {
